--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,20 @@
-<h1> yo <h1>
+<div class="jumbotron">
+  <div class="container">
+    <div class="row heading-row">
+      <div class="col-lg-8 offset-md-2 ">
+        <h1 class="text-light text-center">Besoin d'un coup de main ?</h1>
+        <p class="text-white text-center">Entre ta destination et trouve un parrain</p>
+      </div>
+    </div>
+    <div class="row search-row align-middle">
+      <div class="col-lg-8 offset-md-2 ">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Où allez vous ?" aria-label="Search for...">
+          <span class="input-group-btn">
+            <button class="btn btn-primary" type="button">Go!</button>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
