small devices update

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,13 @@
 <div class="jumbotron">
   <div class="container">
     <div class="row heading-row">
-      <div class="col-lg-8 offset-md-2 ">
+      <div class="col-md-8 offset-md-2 col-sm-12">
         <h1 class="text-light text-center">Besoin d'un coup de main ?</h1>
         <p class="text-white text-center">Entre ta destination et trouve un parrain</p>
       </div>
     </div>
     <div class="row search-row align-middle">
-      <div class="col-lg-8 offset-md-2 ">
+      <div class="col-md-8 offset-md-2 col-sm-12">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Où allez vous ?" aria-label="Search for...">
           <span class="input-group-btn">
